# fastapi-demo

./: .dockerignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
app/: db.py  main.py  model.py
app/ws/: info.py
