[tool.poetry]
name = "fastapi-demo"
version = "0.1.0"
description = ""
authors = ["TATA <evadcmd@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.7"
alembic = "^1.5.8"
psycopg2-binary = "^2.8.6"
asyncpg = "^0.22.0"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.9.1"
mypy = "^0.812"
fastapi = "^0.63.0"
uvicorn = "^0.13.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
